--- a/src/app/components/games-list/games-list.component.html
+++ b/src/app/components/games-list/games-list.component.html
@@ -19,7 +19,7 @@
           </div>
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
             <div class="text-center">
-              <a class="btn btn-outline-dark mt-auto">Agregar al carrito</a>
+              <a class="btn btn-outline-dark mt-auto" (click)="addToCart(game)">Agregar al carrito</a>
             </div>
           </div>
         </div>
