--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
         <button class="btn btn-outline-dark me-2">
           <i class="bi-cart-fill me-1"></i>
           Carrito
-          <span class="badge bg-dark text-white ms-1 rounded-pill" id="cart-count">0</span>
+          <span class="badge bg-dark text-white ms-1 rounded-pill" id="cart-count">{{ cartCount }}</span>
         </button>
       </a>
       <a id="user-icon" [routerLink]="['/perfil']" class="d-none">
