fix: bug categories

--- a/src/app/components/categories/categories.component.html
+++ b/src/app/components/categories/categories.component.html
@@ -13,7 +13,7 @@
             </div>
           </div>
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="aventura.html">Ir a la categoría</a></div>
+            <div class="text-center"><a class="btn btn-outline-dark mt-auto" [routerLink]="['/aventura']">Ir a la categoría</a></div>
           </div>
         </div>
       </div>
@@ -27,7 +27,7 @@
             </div>
           </div>
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="cooperativo.html">Ir a la categoría</a></div>
+            <div class="text-center"><a class="btn btn-outline-dark mt-auto" [routerLink]="['/cooperativo']">Ir a la categoría</a></div>
           </div>
         </div>
       </div>
@@ -41,7 +41,7 @@
             </div>
           </div>
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="estrategia.html">Ir a la categoría</a></div>
+            <div class="text-center"><a class="btn btn-outline-dark mt-auto" [routerLink]="['/estrategia']">Ir a la categoría</a></div>
           </div>
         </div>
       </div>
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="solitario.html">Ir a la categoría</a></div>
+            <div class="text-center"><a class="btn btn-outline-dark mt-auto" [routerLink]="['/solitario']">Ir a la categoría</a></div>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="familiar.html">Ir a la categoría</a></div>
+            <div class="text-center"><a class="btn btn-outline-dark mt-auto" [routerLink]="['/familiar']">Ir a la categoría</a></div>
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="otros.html">Ir a la categoría</a></div>
+            <div class="text-center"><a class="btn btn-outline-dark mt-auto" [routerLink]="['/otros']">Ir a la categoría</a></div>
           </div>
         </div>
       </div>
