--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -12,38 +12,38 @@
           <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="needs-validation" novalidate>
             <div class="mb-3">
               <label for="name" class="form-label">Nombre</label>
-              <input type="text" class="form-control" id="name" formControlName="nombre" placeholder="José Miguel">
-              <div class="text-danger" *ngIf="registerForm.get('nombre')?.invalid && (registerForm.get('nombre')?.dirty || registerForm.get('nombre')?.touched)">
+              <input type="text" class="form-control" id="name" formControlName="name" placeholder="José Miguel">
+              <div class="text-danger" *ngIf="registerForm.get('name')?.invalid && (registerForm.get('name')?.dirty || registerForm.get('nombre')?.touched)">
                 Por favor, ingresa tu nombre.
               </div>
             </div>
             <div class="mb-3">
               <label for="lastname" class="form-label">Apellidos</label>
-              <input type="text" class="form-control" id="lastname" formControlName="apellidos" placeholder="Rojas Pérez">
-              <div class="text-danger" *ngIf="registerForm.get('apellidos')?.invalid && (registerForm.get('apellidos')?.dirty || registerForm.get('apellidos')?.touched)">
+              <input type="text" class="form-control" id="lastname" formControlName="last_names" placeholder="Rojas Pérez">
+              <div class="text-danger" *ngIf="registerForm.get('last_names')?.invalid && (registerForm.get('last_names')?.dirty || registerForm.get('apellidos')?.touched)">
                 Por favor, ingresa tus apellidos.
               </div>
             </div>
             <div class="row g-3">
               <div class="col-md-6">
                 <label for="phone" class="form-label">Teléfono</label>
-                <input type="text" class="form-control" id="phone" formControlName="telefono" placeholder="984948321">
-                <div class="text-danger" *ngIf="registerForm.get('telefono')?.invalid && (registerForm.get('telefono')?.dirty || registerForm.get('telefono')?.touched)">
+                <input type="text" class="form-control" id="phone" formControlName="phone" placeholder="984948321">
+                <div class="text-danger" *ngIf="registerForm.get('phone')?.invalid && (registerForm.get('phone')?.dirty || registerForm.get('telefono')?.touched)">
                   Por favor, ingresa un teléfono válido.
                 </div>
               </div>
               <div class="col-md-6">
                 <label for="city" class="form-label">Ciudad</label>
-                <input type="text" class="form-control" id="city" formControlName="ciudad" placeholder="Osorno">
-                <div class="text-danger" *ngIf="registerForm.get('ciudad')?.invalid && (registerForm.get('ciudad')?.dirty || registerForm.get('ciudad')?.touched)">
+                <input type="text" class="form-control" id="city" formControlName="city" placeholder="Osorno">
+                <div class="text-danger" *ngIf="registerForm.get('city')?.invalid && (registerForm.get('city')?.dirty || registerForm.get('ciudad')?.touched)">
                   Por favor, ingresa una ciudad válida.
                 </div>
               </div>
             </div>
             <div class="mb-3">
               <label for="address" class="form-label">Dirección</label>
-              <input type="text" class="form-control" id="address" formControlName="direccion" placeholder="Av. las condes 183">
-              <div class="text-danger" *ngIf="registerForm.get('direccion')?.invalid && (registerForm.get('direccion')?.dirty || registerForm.get('direccion')?.touched)">
+              <input type="text" class="form-control" id="address" formControlName="address" placeholder="Av. las condes 183">
+              <div class="text-danger" *ngIf="registerForm.get('address')?.invalid && (registerForm.get('address')?.dirty || registerForm.get('direccion')?.touched)">
                 Por favor, ingresa una dirección válida.
               </div>
             </div>
