--- a/src/app/components/games-list/games-list.component.html
+++ b/src/app/components/games-list/games-list.component.html
@@ -1,4 +1,3 @@
-<!-- Sección de juegos -->
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
     <div class="d-flex flex-row justify-content-end w-100">
@@ -26,11 +25,7 @@
           </div>
           <div *ngIf="!currentUser || currentUser.role !== 'admin'" class="card-footer p-4 pt-0 border-top-0 bg-transparent">
             <div class="text-center">
-              <a *ngIf="!isAdmin()" class="btn btn-outline-dark mt-auto" (click)="addToCart(game)">Agregar al carrito</a>
-              <div *ngIf="isAdmin()">
-                <a class="btn btn-outline-dark mt-auto me-2" (click)="openEditModal(game)">Editar</a>
-                <a class="btn btn-outline-dark mt-auto" (click)="deleteGame(game)">Eliminar</a>
-              </div>
+              <a class="btn btn-outline-dark mt-auto" (click)="addToCart(game)">Agregar al carrito</a>
             </div>
           </div>
           <div *ngIf="currentUser && currentUser.role === 'admin'" class="card-footer d-flex flex-row justify-content-center gap-2 p-4 pt-0 border-top-0 bg-transparent">
@@ -43,112 +38,6 @@
           </div>
         </div>
       </div>
-      <div class="col mb-5" *ngIf="isAdmin() && isModifyGamesRoute()">
-        <div class="card h-100">
-          <button class="btn btn-outline-dark h-100" (click)="openCreateModal()">+</button>
-        </div>
-      </div>
     </div>
   </div>
 </section>
-
-
-<!--Nuevo-->
-<div class="col mb-5">
-  <div class="card" *ngIf="showCreateModal">
-    <div class="card-body">
-      <h2 class="card-title text-center mb-5">Crear juego</h2>
-      <form [formGroup]="createGameForm" (ngSubmit)="onSubmitNew()">
-        <div class="mb-3">
-          <label for="name" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="name" formControlName="nombre" placeholder="Catan">
-        </div>
-        <div class="mb-3">
-          <label for="price" class="form-label">Precio</label>
-          <input type="number" class="form-control" id="price" formControlName="precio" placeholder="0">
-        </div>
-        <div class="mb-3">
-          <label for="offerPrice" class="form-label">Precio Original</label>
-          <input type="number" class="form-control" id="offerPrice" formControlName="precioOriginal" placeholder="0">
-        </div>
-        <div class="mb-3">
-          <label for="categoria" class="form-label">Categoría</label>
-          <select class="form-select" id="category" formControlName="categoria">
-            <option *ngFor="let category of categories" [value]="category">{{ category }}</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label for="essential" class="form-label">Esencial</label>
-          <select class="form-select" id="isOffer" formControlName="esencial">
-            <option [ngValue]="true">Sí</option>
-            <option [ngValue]="false">No</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label for="offer" class="form-label">Oferta</label>
-          <select class="form-select" id="offer" formControlName="oferta">
-            <option [ngValue]="true">Sí</option>
-            <option [ngValue]="false">No</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label for="image" class="form-label">Imagen</label>
-          <input type="text" class="form-control" id="image" formControlName="img" placeholder="assets/img/new.png">
-        </div>
-        <div>
-          <button type="button" class="btn btn-dark me-2" (click)="closeCreateModal()">Cerrar</button>
-          <button type="button" class="btn btn-outline-dark" (click)="onSubmitNew()">Guardar cambios</button>
-        </div>
-      </form>
-  </div>
-</div>
-
-<!--Edición-->
-<div class="col mb-5" *ngIf="showEditModal">
-  <div class="card">
-    <div class="card-body">
-      <h2 class="card-title text-center mb-5">Editar juego</h2>
-      <form [formGroup]="editGameForm" (ngSubmit)="onSubmit()">
-        <div class="mb-3">
-          <label for="name" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="name" formControlName="nombre" placeholder="Catan">
-        </div>
-        <div class="mb-3">
-          <label for="price" class="form-label">Precio</label>
-          <input type="number" class="form-control" id="price" formControlName="precio" placeholder="0">
-        </div>
-        <div class="mb-3">
-          <label for="offerPrice" class="form-label">Precio Original</label>
-          <input type="number" class="form-control" id="offerPrice" formControlName="precioOriginal" placeholder="0">
-        </div>
-        <div class="mb-3">
-          <label for="categoria" class="form-label">Categoría</label>
-          <select class="form-select" id="category" formControlName="categoria">
-            <option *ngFor="let category of categories" [value]="category">{{ category }}</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label for="essential" class="form-label">Esencial</label>
-          <select class="form-select" id="isOffer" formControlName="esencial">
-            <option [ngValue]="true">Sí</option>
-            <option [ngValue]="false">No</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label for="offer" class="form-label">Oferta</label>
-          <select class="form-select" id="offer" formControlName="oferta">
-            <option [ngValue]="true">Sí</option>
-            <option [ngValue]="false">No</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label for="image" class="form-label">Imagen</label>
-          <input type="text" class="form-control" id="image" formControlName="img" placeholder="assets/img/new.png">
-        </div>
-        <div>
-          <button type="button" class="btn btn-dark me-2" (click)="closeEditModal()">Cerrar</button>
-          <button type="button" class="btn btn-outline-dark" (click)="onSubmit()">Guardar cambios</button>
-        </div>
-      </form>
-  </div>
-</div>
